Fix step number padding on mobile

--- a/client/css/main.less
+++ b/client/css/main.less
@@ -68,7 +68,6 @@
 
 
 // Step Numbers
-@step-number-spacing: 20px;
 
 .step-number-container {
     padding: 0;
@@ -91,19 +90,6 @@
 
 .step-number.active {
     background-color: @blue-light-color;
-}
-
-.step-number.left {
-    margin-right: @step-number-spacing*(2/3);
-}
-
-.step-number.right {
-    margin-left: @step-number-spacing*(2/3);
-}
-
-.step-number.middle {
-    margin-left: @step-number-spacing/3;
-    margin-right: @step-number-spacing/3;
 }
 
 // About Thank-a-Teacher
